2009-01-15  Martin Simmons  <martin@lispworks.com>

	* swank-lispworks.lisp: wrapper functions for swank-mop
 	slot-boundp-using-class, slot-value-using-class and
 	slot-makunbound-using-class to account for MOP differences.
	
2009-01-16  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (break-in-sldb): Display the argument.

2009-01-16  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (warn-unimplemented-interfaces): Print the
	names with pprint-fill.

2009-01-10  Helmut Eller  <heller@common-lisp.net>

	* swank-openmcl.lisp (install-debugger-globally): Set *break-in-sldb*.

2009-01-10  Tobias C. Rittweiler  <tcr@freebits.de>

	* swank.lisp (do-symbols*): Wrap body in TAGBODY.

2009-01-10  Helmut Eller  <heller@common-lisp.net>

	* slime.el (slime-compile-file-options): New variable.
	(slime-compile-file): Use it.

2009-01-10  David Reitter <david.reitter@gmail.com>

	* slime.el (slime-space): Declare `slime-space' to
	`delete-selection-mode' and friends (CUA) so that their behavior
	is the same as with normal insertion of a space.

2009-01-10  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (swank-compile-file): Take output-file as
	additional argument.  Update backends accordingly.

	* swank.lisp (*fasl-directory*): New variable.
	(fasl-pathname): New function.
	(compile-file-for-emacs): Use it.

2009-01-10  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (set-default-initial-binding): New function.

	* swank.lisp (setup-stream-indirection):  Use it

2009-01-09  Helmut Eller  <heller@common-lisp.net>

	* swank-allegro.lisp (swank-compile-string): Don't use the
	no-longer-existing directory argument.

2009-01-08  Helmut Eller  <heller@common-lisp.net>

	* slime.el: Move the tree widget for compiler notes to contrib/.

2009-01-08  Helmut Eller  <heller@common-lisp.net>

	* swank-backend.lisp (swank-compile-string): Pass the
	buffer-file-name to Lisp, not only the directory.
	Update callers accordingly.